Font fix and spacing ++ scroll

--- a/personalPortfolioStyle.css
+++ b/personalPortfolioStyle.css
@@ -1,13 +1,15 @@
 @media only screen and (max-width: 600px) {    
 }
-
+html {
+    scroll-behavior: smooth;
+}
 header {
     background-color: black;
     height: 50px;
 }
 body {
     background-color:palevioletred ;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 #navbar {
     color: pink;
@@ -40,9 +42,10 @@ text-align: center;
     background-color:darkmagenta ;
 }
 #welcome-section {
-    padding-top: 80px;
+    padding: 80px 225px 0px 225px ;
     text-align: center;
     height: 186px;
+    font-size: large;
 }
 #projects {
     direction: ltr;
@@ -51,7 +54,7 @@ text-align: center;
 }
 #projects h3 {
     text-align: center;
-    padding-top: 60px;
+    padding-top: 100px;
 }
 #project-tile-section a{
     text-decoration: none;
